syntax = "proto3";

package helloworld;
option go_package = "./proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloApply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloApply {
  string message = 1;
}